# fastapi_learn

./: .env.example  .gitignore  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_08_15_2222-c5dcb97a6c44_create_user_table.py  2025_08_15_2225-a3edb9021341_create_user_table.py  2025_08_19_0836-9704963abb8d_create_review_table.py  2025_08_21_1014-1216c4faccae_create_all_tables.py  2025_08_21_1024-b9e391dedee6_add_password.py  2025_08_21_1336-978fdc4e6c23_update_tables.py  2025_08_21_1344-0fd2816303d6_change_movie__year_type_to_string.py  2025_08_21_1747-2dd8260ad2ec_add_plot_to_cinema.py  2025_08_21_1753-61d8f735fe4e_add_director_to_the_cinema.py  2025_08_21_1839-6ee357ebdcb4_add_vector.py  2025_08_21_1849-31a6ceeff87e_add_vector.py
src/: config.py  main.py  utils.py
src/api/: __init__.py  movies.py  reviews.py  users.py
src/api/basic_auth/: views.py
src/models/: __init__.py  base.py  db_helper.py  genres.py  movie.py  reviews.py  user.py
src/schemas/: genre.py  movie.py  omdb.py  review.py  user.py
